<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/ic_nav_item_slideshow"
            android:title="@string/nav_nav" />
        <item
            android:id="@+id/nav_browser"
            android:icon="@drawable/ic_nav_item_slideshow"
            android:title="@string/nav_webview" />
        <item
            android:id="@+id/nav_sub"
            android:icon="@drawable/ic_nav_item_slideshow"
            android:title="Sample" />
        <item
            android:id="@+id/nav_item"
            android:icon="@mipmap/ic_remi"
            android:title="@string/nav_http" />
        <item
            android:id="@+id/nav_item_sub"
            android:icon="@mipmap/ic_remi"
            android:title="@string/nav_http_json" />
        <item
            android:id="@+id/nav_intent_filter"
            android:icon="@mipmap/ic_remi"
            android:title="@string/nav_intent_filter" />
    </group>
</menu>
